fix spacing on mobile

--- a/api/static/style.css
+++ b/api/static/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    width: 50vw;
+    width: 95vw;
     margin: 0 auto;
     font: 1.5rem sans-serif;
     background-color: #333;
@@ -41,5 +41,12 @@ h1 {
     &:hover {
         scale: 1.1;
         box-shadow: 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media (min-width: 1000px) {
+    body {
+        width: 50vw;
+        margin: 0 auto;
     }
 }
